# tiberius_dataprep

./: .gitignore  LICENSE  README.md  nextflow.config  pyproject.toml
.github/workflows/: ci.yml
conf/: local_docker.config  slurm_brain.config  test.config
config/: base.config  config.yaml  config_dataprep.yaml  config_train_eval.yaml  local_singularity.config  nextflow.config  slurm_brain.config  slurm_generic.config
docs/: eudicots_training.md
scripts/: filter_gtf_codons.py  map_transcript_ids.py  remove_incomplete_transcripts.py
tests/: test_util_get_best_epoch.py  test_util_plot_accuracies.py  test_util_plot_gffcompare.py  test_util_read_stats.py  test_util_smoke.py
tiberius_dataprep/: eval_training.nf  genome2tfrecords.nf  plot_acc.ipynb  util.py
